welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:62: error: type mismatch;
 found   : Unit
 required: Boolean
			if ( nb=getMondeHauteur()*getMondeHauteur() ) {return}
                               ^